force-app/main/default/objects/User_Entry__c/User_Entry__c.object-meta.xml
<CustomObject>
    <label>User Entry</label>
    <nameField>
        <label>User Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>