force-app/main/default/objects/User_Entry__c/fields/Alternate_ML_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Alternate_ML_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate ML Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>