force-app/main/default/objects/User_Entry__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>1C0890RD08</fullName>
            </value>
            <value>
                <fullName>4U08EG0009</fullName>
            </value>
            <value>
                <fullName>6U08SA0009</fullName>
            </value>
            <value>
                <fullName>AT08100407</fullName>
            </value>
            <value>
                <fullName>B108000003</fullName>
            </value>
            <value>
                <fullName>B108000007</fullName>
            </value>
            <value>
                <fullName>B108RDPVAM</fullName>
            </value>
            <value>
                <fullName>B408RRD087</fullName>
            </value>
            <value>
                <fullName>BA08RD6628</fullName>
            </value>
            <value>
                <fullName>BB08058011</fullName>
            </value>
            <value>
                <fullName>BC08RD5173</fullName>
            </value>
            <value>
                <fullName>BH08RDDS01</fullName>
            </value>
            <value>
                <fullName>BM08RD7311</fullName>
            </value>
            <value>
                <fullName>BM08RD7312</fullName>
            </value>
            <value>
                <fullName>BN80510000</fullName>
            </value>
            <value>
                <fullName>BV00062883</fullName>
            </value>
            <value>
                <fullName>BZ08RDDS01</fullName>
            </value>
            <value>
                <fullName>CNA3081003</fullName>
            </value>
            <value>
                <fullName>CR08615502</fullName>
            </value>
            <value>
                <fullName>CR08615503</fullName>
            </value>
            <value>
                <fullName>DE08620600</fullName>
            </value>
            <value>
                <fullName>E413269860</fullName>
            </value>
            <value>
                <fullName>E413269862</fullName>
            </value>
            <value>
                <fullName>E413269863</fullName>
            </value>
            <value>
                <fullName>E413269865</fullName>
            </value>
            <value>
                <fullName>E413269868</fullName>
            </value>
            <value>
                <fullName>EE21624160</fullName>
            </value>
            <value>
                <fullName>GRA3XXRDPV</fullName>
            </value>
            <value>
                <fullName>GV12830000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>