force-app/main/default/objects/User_Entry__c/fields/CWID__c.field-meta.xml
<CustomField>
    <fullName>CWID__c</fullName>
    <label>CWID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>