force-app/main/default/objects/User_Entry__c/fields/CWID_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>CWID_Deactivated__c</fullName>
    <label>CWID Deactivated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>