force-app/main/default/objects/User_Entry__c/fields/Deputy_Manager__c.field-meta.xml
<CustomField>
    <fullName>Deputy_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deputy Manager/ Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>