force-app/main/default/objects/User_Entry__c/fields/Grant_access_to_UMA__c.field-meta.xml
<CustomField>
    <fullName>Grant_access_to_UMA__c</fullName>
    <inlineHelpText>Select &quot;Yes&quot; if you want to allow user to login to UMA application.</inlineHelpText>
    <label>Grant access to UMA</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>