force-app/main/default/objects/User_Entry__c/fields/Is_Bayer_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Bayer_User__c</fullName>
    <formula>UPPER(TEXT(Uma_Company__c)) == &apos;BAYER&apos;</formula>
    <label>Is Bayer User</label>
    <type>Checkbox</type>
</CustomField>