force-app/main/default/objects/User_Entry__c/fields/MAPV_Department__c.field-meta.xml
<CustomField>
    <fullName>MAPV_Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MAPV Department</label>
    <referenceTo>MAPV_Department__c</referenceTo>
    <relationshipLabel>User Entries</relationshipLabel>
    <relationshipName>User_Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>