force-app/main/default/objects/User_Entry__c/fields/Resource_Manager__c.field-meta.xml
<CustomField>
    <fullName>Resource_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Manager (R Line)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Entries2</relationshipName>
    <type>Lookup</type>
</CustomField>