force-app/main/default/objects/User_Entry__c/fields/SecondaryCWID__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCWID__c</fullName>
    <label>2nd CWID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>