force-app/main/default/objects/User_Entry__c/fields/Staff_Status__c.field-meta.xml
<CustomField>
    <fullName>Staff_Status__c</fullName>
    <label>Staff Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Long-Term Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>