force-app/main/default/objects/User_Entry__c/fields/Time_Tracking_Required__c.field-meta.xml
<CustomField>
    <fullName>Time_Tracking_Required__c</fullName>
    <inlineHelpText>• REQUIRED - Position requires TT
• NOT REQUIRED - Position does not require TT​  
  • UPDATE EXISTING -  Existing TT account requires updates (Resource Manager, Cost Center)</inlineHelpText>
    <label>Time Tracking Required</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Update Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>