force-app/main/default/objects/User_Entry__c/validationRules/Change_Owner_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Owner_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(OwnerId) &amp;&amp; CWID__c &lt;&gt; Owner:User.FederationIdentifier  &amp;&amp; $Permission.TransferUserEntries = false</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Owner cannot be changed.</errorMessage>
</ValidationRule>