force-app/main/default/objects/User_Entry__c/validationRules/Cost_Center_Required_On_Bayer_Company.validationRule-meta.xml
<ValidationRule>
    <fullName>Cost_Center_Required_On_Bayer_Company</fullName>
    <active>true</active>
    <description>Cost Center field is required when Company is selected as Bayer.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Uma_Company__c, &apos;BAYER&apos;) ,  
   ISPICKVAL(Cost_Center__c, &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Cost_Center__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>