force-app/main/default/objects/User_Entry__c/validationRules/CWID_Deactivated_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CWID_Deactivated_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  NOT(ISNEW()),
  TEXT(Staff_Status__c) = &quot;Left&quot;, 
  ISPICKVAL(CWID_Deactivated__c , &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>CWID_Deactivated__c</errorDisplayField>
    <errorMessage>Please select CWID Deactivated field when Staff Status=Left</errorMessage>
</ValidationRule>