force-app/main/default/objects/User_Entry__c/validationRules/Restrict_NotRequired_To_UpdateExisting.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_NotRequired_To_UpdateExisting</fullName>
    <active>true</active>
    <description>Not Required to Update Existing is not allowed in Time Tracking Required field.</description>
    <errorConditionFormula>ISCHANGED(Time_Tracking_Required__c)  &amp;&amp;  
TEXT(PRIORVALUE(Time_Tracking_Required__c))  = &apos;Not Required&apos;  &amp;&amp;
TEXT(Time_Tracking_Required__c) = &apos;Update Existing&apos;</errorConditionFormula>
    <errorDisplayField>Time_Tracking_Required__c</errorDisplayField>
    <errorMessage>Time Tracking from Not Required to Update Existing is not allowed.</errorMessage>
</ValidationRule>