force-app/main/default/objects/User_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CWID__c</columns>
    <columns>Company__c</columns>
    <columns>Primary_Job_Role__c</columns>
    <columns>Locations__c</columns>
    <columns>MAPV_Department__c</columns>
    <columns>MAPV_Group__c</columns>
    <columns>Staff_Status__c</columns>
    <columns>Resource_Manager__c</columns>
    <columns>Deputy_Manager__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>